Add new endpoint for emailing autocomplete. Fix issue with shared private wishlists in public user profiles